src/wbw/chapter-header.scss
.chapter-header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 35px 25px;
    font-size: 24px;

    img {
        height: 35px;
        margin-right: 15px;
    }

    @media only screen and (max-width: 600px) {
        .space {
            display: none;
        }

        .translation {
            display: block;
        }
    }
}

